<resources>
    <string name="app_name">Hot Stuff</string>
    <string name="label_home_fragment">Home</string>
    <string name="label_items_fragment">Items</string>
    <string name="label_create_fragment">Create</string>
    <string name="label_learn_fragment">Learn</string>
    <string name="label_settings_fragment">Settings</string>
    <string name="label_search">Search</string>
    <string name="label_download">Download Records</string>
    <string name="label_expand_menu">More</string>
    <string name="label_rate">Rate</string>
    <string name="label_report">Report Bug</string>
    <string name="label_feedback">Send Feedback</string>
    <string name="label_create_item">Create a new item</string>
    <string name="label_create_building">Create a new building</string>
    <string name="label_building_value">Total Building Value</string>
    <string name="label_building_value_placeholder">$ 0.00</string>
    <string name="label_building_name_placeholder">Sample House</string>
    <string name="label_building_quantity_placeholder">0 items</string>
    <string name="label_chart_type_placeholder">Item Distribution</string>
    <string name="label_name">Name</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_category">Category</string>
    <string name="label_room">Room</string>
    <string name="label_make">Brand / Manufacturer</string>
    <string name="label_value">Value (per item)</string>
    <string name="label_description">Description</string>
    <string name="label_create">Save item</string>
    <string name="label_save">Save</string>
    <string name="label_edit">Edit</string>
    <string name="icon_bitcoin">₿</string>
    <string name="icon_dollar">$</string>
    <string name="icon_dong">₫</string>
    <string name="icon_euro">€</string>
    <string name="icon_guarani">₲</string>
    <string name="icon_hryvnia">₴</string>
    <string name="icon_kip">₭</string>
    <string name="icon_lari">₾</string>
    <string name="icon_lira">₺</string>
    <string name="icon_manat">₼</string>
    <string name="icon_naira">₦</string>
    <string name="icon_peso">₱</string>
    <string name="icon_pound">₤</string>
    <string name="icon_ruble">₽</string>
    <string name="icon_rupee">र</string>
    <string name="icon_shekel">₪</string>
    <string name="icon_tenge">₸</string>
    <string name="icon_tugrik">₮</string>
    <string name="icon_won">₩</string>
    <string name="icon_yen_yuan">¥</string>
    <string name="label_currency">Currency</string>
    <string name="label_theme">Theme</string>
    <string name="label_scale">Text Size</string>
    <string name="label_language">Language</string>
    <string name="label_currency_summary">Choose your preference of currency icon \n\nWARNING: Changing your preferred currency does not update previously entered values</string>
    <string name="label_scale_summary">Change the size of text throughout the app</string>
    <string name="label_theme_summary">Choose your preference of app theme</string>
    <string name="label_language_summary">Choose the language you want to use for text within the app</string>
    <string name="label_light">light</string>
    <string name="label_dark">dark</string>
    <string name="label_system">system</string>
    <string name="label_bitcoin">bitcoin</string>
    <string name="label_dollar">dollar</string>
    <string name="label_dong">dong</string>
    <string name="label_euro">euro</string>
    <string name="label_guarani">guarani</string>
    <string name="label_hryvnia">hryvnia</string>
    <string name="label_kip">kip</string>
    <string name="label_lari">lari</string>
    <string name="label_lira">lira</string>
    <string name="label_manat">manat</string>
    <string name="label_naira">naira</string>
    <string name="label_peso">peso</string>
    <string name="label_pound">pound</string>
    <string name="label_ruble">ruble</string>
    <string name="label_rupee">rupee</string>
    <string name="label_shekel">shekel</string>
    <string name="label_tenge">tenge</string>
    <string name="label_tugrik">tugrik</string>
    <string name="label_won">won</string>
    <string name="label_yen_yuan">yen_yuan</string>
    <string name="default_currency">dollar</string>
    <string name="default_scale">medium</string>
    <string name="default_theme">device</string>
    <string name="default_language">english</string>
    <string name="key_currency">currency</string>
    <string name="key_scale">textsize</string>
    <string name="key_theme">theme</string>
    <string name="key_language">language</string>
    <string name="label_walkthroughs">Walkthroughs</string>
    <string name="label_resources">Resources</string>
    <string name="label_about">About Hot Stuff</string>
    <string name="label_walkthroughs_subtitle">Short user guides to help you get started</string>
    <string name="label_resources_subtitle">Additional notes and perspectives</string>
    <string name="label_about_subtitle">General app information</string>
    <string name="label_why_care">Why should I care?</string>
    <string name="label_get_started">Getting started</string>
    <string name="label_export">Exporting records</string>
    <string name="label_detail">Attention to detail</string>
    <string name="label_jargon_glossary">Insurance jargon glossary</string>
    <string name="label_adjusters">Public adjusters</string>
    <string name="label_example_form">Example Proof of Loss form</string>
    <string name="label_acknowledgements">Acknowledgements</string>
    <string name="label_sourcecode">View source code</string>
    <string name="label_terms">Terms and Conditions</string>
    <string name="label_required_hint">Required</string>
    <string name="label_quantity_value_hint">Quantity cannot be less than one</string>
    <string name="label_dialog_positive">OK</string>
    <string name="label_dialog_create_title">Missing required value</string>
    <string name="label_dialog_create_body">To continue, make sure your item has all mandatory information filled out</string>
    <string name="learn_repo_link">https://github.com/PamCatten/hot-stuff-kotlin</string>
    <string name="toolbar_issue_link">https://github.com/PamCatten/hot-stuff-kotlin/issues/new</string>
    <string name="onboard_button_skip">SKIP</string>
    <string name="onboard_button_continue">NEXT</string>
    <string name="onboard_button_done">GET STARTED</string>
    <string name="onboard_one_title">Welcome aboard!</string>
    <string name="onboard_one_text">
        Welcome to Hot Stuff! Your trusted companion for streamlining the
        process of documenting your belongings for insurance claims.
    </string>
    <string name="onboard_two_title">Organize efficiently</string>
    <string name="onboard_two_text">
        Effortlessly add items, take pictures, and download your records to seamlessly transfer the work
        you do here to Excel or Google Sheets.
    </string>
    <string name="onboard_three_title">Privacy first</string>
    <string name="onboard_three_text">
        Hot Stuff is designed with privacy in mind. No personal information, account or internet
        connection is required to use it. Create records confidently knowing your data is secure.
    </string>
    <string name="onboard_four_title">Peace of mind, simplified</string>
    <string name="onboard_four_text">
        Put yourself on the path to peace of mind by securing your belongings digitally.
        Now, with the introductions out of the way, let\'s get you prepared for the unexpected!
    </string>
    <string name="feedback_email">campatten.dev@outlook.com</string>
    <string name="feedback_subject">FEEDBACK: (Your Suggestion)</string>
    <string name="feedback_info_body">
        Hey! Thanks for helping me improve Hot Stuff. Just a quick heads up, please make sure
        \'feedback\' is somewhere in the subject of your suggestion so it ends up where I can see
        it!
    </string>
    <string name="feedback_info_closing">Much love,</string>
    <string name="feedback_info_identity">Cam</string>
    <string name="description_learn_dropdown_icon">Expand items icon</string>
    <string name="filler_unspecified_value">Unspecified</string>
    <string name="filler_article_title">Fringilla ut morbi tincidunt augue interdum velit euismod in</string>
</resources>