<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbar_main_search"
        android:icon="@drawable/icon_search"
        android:title="@string/label_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/toolbar_main_download"
        android:icon="@drawable/icon_download"
        android:title="@string/label_download"
        app:showAsAction="always"/>
    <item
        android:id="@+id/toolbar_main_report"
        android:title="@string/label_report"
        app:showAsAction="never"/>
    <item
        android:id="@+id/toolbar_main_rate"
        android:title="@string/label_rate"
        app:showAsAction="never"/>
    <item
        android:id="@+id/toolbar_main_feedback"
        android:title="@string/label_feedback"
        app:showAsAction="never"/>
</menu>