<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home"
        android:title="@string/label_home_fragment"
        android:orderInCategory="0"/>
    <item
        android:id="@+id/navigation_items"
        android:icon="@drawable/icon_items"
        android:title="@string/label_items_fragment"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/navigation_create_item"
        android:icon="@drawable/icon_create"
        android:title="@string/label_create_fragment"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/navigation_learn"
        android:icon="@drawable/icon_learn"
        android:title="@string/label_learn_fragment"
        android:orderInCategory="3"/>
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/icon_settings"
        android:title="@string/label_settings_fragment"
        android:orderInCategory="4"/>
</menu>