<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:theme="@style/container_fragment"
    android:id="@+id/layout_create_item"
    android:paddingTop="?attr/actionBarSize"
    android:paddingBottom="?attr/actionBarSize"
    tools:context=".ui.create.CreateItemFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/container_fragment">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemNameContainer"
            style="@style/text_input_layout"
            app:helperText="Required"
            app:helperTextTextColor="?attr/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemNameText"
                style="@style/text_input_field"
                android:inputType="textCapWords"
                android:hint="@string/label_name"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemQuantityContainer"
            style="@style/text_input_layout"
            app:helperText="Required"
            app:helperTextTextColor="?attr/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemQuantityText"
                style="@style/text_input_field"
                android:inputType="number"
                android:hint="@string/label_quantity"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemCategoryContainer"
            style="@style/text_input_layout"
            app:helperText="Required"
            app:helperTextTextColor="?attr/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemCategoryText"
                style="@style/text_input_field"
                android:inputType="textAutoCorrect"
                android:hint="@string/label_category"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemRoomContainer"
            style="@style/text_input_layout"
            app:helperText="Required"
            app:helperTextTextColor="?attr/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemRoomText"
                style="@style/text_input_field"
                android:inputType="textAutoCorrect"
                android:hint="@string/label_room"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemMakeContainer"
            style="@style/text_input_layout"
            app:helperTextTextColor="?attr/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemMakeText"
                style="@style/text_input_field"
                android:inputType="textAutoCorrect"
                android:hint="@string/label_make"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemValueContainer"
            style="@style/text_input_layout"
            app:helperTextTextColor="?attr/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemValueText"
                style="@style/text_input_field"
                android:inputType="numberDecimal"
                android:hint="@string/label_value"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemDescriptionContainer"
            style="@style/text_input_layout"
            app:helperTextTextColor="?attr/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemDescriptionText"
                style="@style/text_input_field"
                android:inputType="textCapSentences"
                android:maxLength="200"
                android:hint="@string/label_description"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/create_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:cropToPadding="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            android:elevation="8dp"
            app:shapeAppearanceOverlay="@style/image_rounded"
            app:srcCompat="@drawable/default_image"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/itemPhotoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            android:text="Select Photo"
            android:textColor="?attr/colorOnPrimary"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/itemCreateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_create"
            android:textColor="?attr/colorOnPrimary"/>
    </LinearLayout>
</ScrollView>