<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/onboard_one_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="65"
        android:scaleType="fitXY"
        android:cropToPadding="true"
        android:src="@drawable/image_onboard_one"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:layout_margin="32dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/onboard_one_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboard_one_title"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/onboard_one_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboard_one_text"
            android:lineHeight="26dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/onboard_one_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/onboard_two_one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:cornerRadius="25dp"
            android:text="@string/onboard_button_skip"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:textColor="?attr/colorSecondary"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toBottomOf="@id/onboard_one_text"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintEnd_toStartOf="@id/onboard_one_continue_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/onboard_one_continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:cornerRadius="25dp"
            android:text="@string/onboard_button_continue"
            android:backgroundTint="?attr/colorAccent"
            android:textColor="?attr/colorPrimaryVariant"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toBottomOf="@id/onboard_one_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>