<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    android:paddingBottom="?attr/actionBarSize">
    <androidx.cardview.widget.CardView
        android:id="@+id/card_summary"
        style="@style/card"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <TextView
                android:id="@+id/label_building_value"
                style="@style/text_subtitle"
                android:text="@string/label_building_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_value_total"
                style="@style/text_subtitle"
                android:text="@string/label_building_value_placeholder"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_building_name"
                style="@style/text_subtitle"
                android:text="@string/label_building_name_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_building_value" />

            <TextView
                android:id="@+id/label_building_quantity"
                style="@style/text_subtitle"
                android:text="@string/label_building_quantity_placeholder"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_building_value" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/label_item_distro"
        style="@style/text_subtitle"
        android:layout_margin="16dp"
        android:layout_marginBottom="8dp"
        android:text="Category Distribution"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_summary"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_1"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_item_distro"
        style="@style/card">
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/topBarChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:layout_margin="8dp"/>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/label_category"
        style="@style/text_subtitle"
        android:layout_margin="16dp"
        android:text="Room Value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_1"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_2"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_category"
        style="@style/card">
        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/bottomBarChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:layout_margin="8dp"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>