<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="32dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:orientation="vertical">
        <TextView
            android:id="@+id/onboard_four_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="BUILDING BUILDING"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="26sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/onboard_four_text"
            style="@style/text_onboard_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="There\'s one final step before you start to inventory your belongings—a brief record of the structure. \n\nThese values are used only for organizing item data within it app, so feel free to call it whatever you like. You can always change things later in the settings."/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/building_name_container"
            style="@style/text_input_layout"
            android:layout_marginHorizontal="0dp"
            app:helperText="Required"
            app:helperTextTextColor="?attr/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/building_name_field"
                style="@style/text_input_field"
                android:inputType="textCapWords"
                android:hint="@string/label_name"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/building_type_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:helperText="Required"
            app:helperTextTextColor="?attr/colorAccent">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/building_type_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:hint="@string/label_type" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/building_description_container"
            style="@style/text_input_layout"
            android:layout_marginHorizontal="0dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/building_description_field"
                style="@style/text_input_field"
                android:inputType="text"
                android:hint="@string/label_description"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/building_create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:layout_marginVertical="16dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:cornerRadius="25dp"
            android:text="@string/label_create_building"
            android:backgroundTint="?attr/colorAccent"
            android:textColor="?attr/colorPrimaryVariant" />
    </LinearLayout>

</LinearLayout>